Changed the static files links in all html templates.

--- a/my_django_app/customer/Templates/Customer/edit.html
+++ b/my_django_app/customer/Templates/Customer/edit.html
@@ -9,19 +9,19 @@
     <title>Edit Queue</title>
 
     <!--begin::Global Theme Styles(used by all pages)-->
-    <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
     <!--end::Global Theme Styles-->
 
     <!--begin::Layout Themes(used by all pages)-->
 
-    <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
     <!--end::Layout Themes-->
-    <link rel="shortcut icon" href="{%static 'customer/Blue_sqrs.png' %}"/>
+    <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
 </head>
 
 <body id="kt_body" class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed">
@@ -37,7 +37,7 @@
 							<!--begin::Header Logo-->
 							<div class="header-logo">
 								<a href="#">
-									<img alt="Logo" src="{%static 'customer/logo_white.png'%}" class="max-h-50px">
+									<img alt="Logo" src="https://majdalkawaas.github.io/static/customer/logo_white.png" class="max-h-50px">
 								</a>
 							</div>
 							<!--end::Header Logo-->
@@ -225,7 +225,7 @@
 				<!--begin::Header-->
 				<div class="d-flex align-items-center mt-5">
 					<div class="symbol symbol-100 mr-5">
-						<div class="symbol-label" style="background-image:url('{%static 'customer/300_21.jpg'%}')"></div>
+						<div class="symbol-label" style="background-image:url('https://majdalkawaas.github.io/static/customer/300_21.jpg')"></div>
 						
 					</div>
 					<div class="d-flex flex-column">
@@ -347,22 +347,12 @@
     <!--end::Global Config-->
 
     <!--begin::Global Theme Bundle(used by all pages)-->
-    <script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    <script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-    <script src="{%static 'customer/scripts.bundle.js'%}"></script>
-    <script src="{%static 'customer/tagify.js'%}"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/tagify.js"></script>
     <!--end::Global Theme Bundle-->
-    <!-- <script>
-        var input = document.querySelector('input[name=tags-outside]')
-        // init Tagify script on the above inputs
-        var tagify = new Tagify(input, {
-            whitelist: ["foo", "bar", "baz"],
-            dropdown: {
-                position: "input",
-                enabled: 0 // always opens dropdown when input gets focus
-            }
-        })
-    </script> -->
+    
 
 </body>
 
