--- a/my_django_app/customer/Templates/Customer/error.html
+++ b/my_django_app/customer/Templates/Customer/error.html
@@ -13,33 +13,22 @@
         <!--begin::Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>        <!--end::Fonts-->
 
-        <link rel="stylesheet" href="{%static 'customer/error.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/error.css">
 
 
-{% comment %} 
-        <!--begin::Page Custom Styles(used by this page)-->
-                <link href="assets/css/pages/error/error-3.css" rel="stylesheet" type="text/css"/>
-        <!--end::Page Custom Styles-->
 
-        <!--begin::Global Theme Styles(used by all pages)-->
-            <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
-        <!--end::Global Theme Styles-->
 
-        <!--begin::Layout Themes(used by all pages)-->
-            <link href="assets/css/themes/layout/header/base/light.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/css/themes/layout/header/menu/light.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/css/themes/layout/brand/dark.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/css/themes/layout/aside/dark.css" rel="stylesheet" type="text/css"/>        
-        <!--end::Layout Themes--> {% endcomment %}
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/login-3.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
+
+
+
 
 
             </head>
@@ -51,7 +40,7 @@
     	<!--begin::Main-->
 	<div class="d-flex flex-column flex-root">
 		<!--begin::Error-->
-<div class="error error-3 d-flex flex-row-fluid bgi-size-cover bgi-position-center" style="background-image: url({%static 'customer/bg3.jpg'%}">
+<div class="error error-3 d-flex flex-row-fluid bgi-size-cover bgi-position-center" style="background-image: url(https://majdalkawaas.github.io/static/customer/bg3.jpg">
 	<!--begin::Content-->
 	<div class="px-10 px-md-30 py-10 py-md-0 d-flex flex-column justify-content-md-center">
 		<h1 class="error-title text-stroke text-transparent">404</h1>
@@ -137,9 +126,9 @@
         <!--end::Global Config-->
 
 
-        <script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    	<script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-        <script src="{%static 'customer/scripts.bundle.js'%}"></script>
+        <script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    	<script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+        <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
 
 
     </body>
