--- a/my_django_app/customer/Templates/Customer/queueOperator.html
+++ b/my_django_app/customer/Templates/Customer/queueOperator.html
@@ -19,20 +19,20 @@
 
 
 	<!--begin::Global Theme Styles(used by all pages)-->
-	<link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
 		<!--end::Global Theme Styles-->
 
 	<!--begin::Layout Themes(used by all pages)-->
 
-	<link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/light.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/light1.css'%}">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
 	<!--end::Layout Themes-->
 
-	<link rel="shortcut icon" href="{%static 'customer/Blue_sqrs.png' %}"/>
+	<link rel="shortcut icon" href="https://majdalkawaas.github.io/static/'customer/Blue_sqrs.png"/>
 
 
 </head>
@@ -201,7 +201,7 @@
 			<!--begin::Header-->
 			<div class="d-flex align-items-center mt-5">
 				<div class="symbol symbol-100 mr-5">
-					<div class="symbol-label" style="background-image:url('{%static 'customer/300_21.jpg'%}')"></div>
+					<div class="symbol-label" style="background-image:url(https://majdalkawaas.github.io/static/customer/300_21.jpg)"></div>
 					
 				</div>
 				<div class="d-flex flex-column">
@@ -310,9 +310,9 @@
 	<!--end::Global Config-->
 
 	<!--begin::Global Theme Bundle(used by all pages)-->
-	<script src="{%static 'customer/plugins.bundle.js'%}"></script>
-	<script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-	<script src="{%static 'customer/scripts.bundle.js'%}"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
 	<!--end::Global Theme Bundle-->
 
 
@@ -345,22 +345,16 @@
 
 
 
-		
-		// var myTable = $('#example1').DataTable();
-		// $('#example1').on( 'click', 'tbody tr', function () {
-		// 	myTable.row( this ).remove().draw();
-		// } );
+
 
 		$('#example1').DataTable({
 			"aoColumnDefs" :[
 			{ "bSortable": false, "aTargets": [ 0, 1, 2, 3 ,4, 5] },
-			// {dom: 'lrtip'},
-        	// { "bSearchable": false, "aTargets": [ 0, 1, 2, 3 ] }
+			
 			]
 		})
 
-		// $('#example1').DataTable({sDom: 'lrtip'});
-
+		
 
 	</script>
 	<style>
@@ -375,9 +369,7 @@
 		background-color: #292f48;
 	}
 	</style>
-	<!-- <script src="{%static 'customer/queueManagement.js'%}"></script> -->
-	<!--end::Page Scripts-->
-	<!--end::Page Scripts-->
+	
 </body>
 <!--end::Body-->
 
