--- a/my_django_app/customer/Templates/Customer/registration/password_reset_complete.html
+++ b/my_django_app/customer/Templates/Customer/registration/password_reset_complete.html
@@ -13,14 +13,14 @@
         <!--begin::Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>        <!--end::Fonts-->
 
-        <link rel="stylesheet" href="{%static 'customer/password_reset_done.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/password_reset_done.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+        <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
                    
 
             </head>
@@ -32,12 +32,10 @@
     	<!--begin::Main-->
 	<div class="d-flex flex-column flex-root">
 		<!--begin::Error-->
-<div class="error error-4 d-flex flex-row-fluid bgi-size-cover bgi-position-center" style="background-image: url({%static 'customer/bg4.jpg'%});">
+<div class="error error-4 d-flex flex-row-fluid bgi-size-cover bgi-position-center" style="background-image: url(https://majdalkawaas.github.io/static/customer/bg4.jpg);">
 	<!--begin::Content-->
 	<div class="d-flex flex-column flex-row-fluid align-items-center align-items-md-start justify-content-md-center text-center text-md-left px-10 px-md-30 py-10 py-md-0 line-height-xs">
-		{% comment %} <h1 class="error-title text-success font-weight-boldest line-height-sm">
-			404
-		</h1> {% endcomment %}
+		
 		<p class="error-subtitle text-success font-weight-boldest mb-10">
 			DONE
 		</p>
@@ -116,9 +114,9 @@
         </script>
         <!--end::Global Config-->
 
-    	<script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    	<script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-        <script src="{%static 'customer/scripts.bundle.js'%}"></script>
+    	<script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    	<script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+        <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
 
 
             </body>
