--- a/my_django_app/guest/Templates/guest/waitingPage.html
+++ b/my_django_app/guest/Templates/guest/waitingPage.html
@@ -11,17 +11,17 @@
     <title>Document</title>
 
     <!--begin::Global Theme Styles(used by all pages)-->
-    <link rel="stylesheet" href="{%static 'guest/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/style.bundle.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/plugins.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/prismjs.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/style.bundle.css">
     <!--end::Global Theme Styles-->
 
     <!--begin::Layout Themes(used by all pages)-->
 
-    <link rel="stylesheet" href="{%static 'guest/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/light.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/light1.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/dark.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/dark1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/light.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/light1.css">
     <!--end::Layout Themes-->
 
     <style>
@@ -141,12 +141,10 @@
     <!--end::Global Config-->
 
     <!--begin::Global Theme Bundle(used by all pages)-->
-    <!-- <link rel="stylesheet" href="{%static 'customer/login-3.css'%}"> -->
-    <script src="{%static 'guest/plugins.bundle.js'%}"></script>
-    <script src="{%static 'guest/prismjs.bundle.js'%}"></script>
-    <script src="{%static 'guest/scripts.bundle.js'%}"></script>
-    <!-- <script src="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
-		    	   <script src="CMPS253/Template/assets/js/scripts.bundle.js"></script> -->
+    <script src="https://majdalkawaas.github.io/static/guest/plugins.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/guest/prismjs.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/guest/scripts.bundle.js"></script>
+    
     <!--end::Global Theme Bundle-->
 </body>
 
