--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -19,22 +19,21 @@
 
 
 	<!--begin::Global Theme Styles(used by all pages)-->
-	<link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-	<link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
 	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<!--end::Global Theme Styles-->
 
 	<!--begin::Layout Themes(used by all pages)-->
 
-	<link rel="stylesheet" href="{%static 'customer/light.css'%}">
+	<link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
 	<!--end::Layout Themes-->
 
-	<link rel="shortcut icon" href="{%static 'customer/Blue_sqrs.png' %}"/>
+	<link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
 
 </head>
 <!--end::Head-->
@@ -47,9 +46,7 @@
 	<!--begin::Header Mobile-->
 	<div id="kt_header_mobile" class="header-mobile align-items-center  header-mobile-fixed ">
 		<!--begin::Logo-->
-		<!-- <a href="index.html">
-			<img alt="Logo" src="CMPS253/Template/assets/media/logos/logo-light.png" />
-		</a> -->
+		
 		<!--end::Logo-->
 
 		<!--begin::Toolbar-->
@@ -96,7 +93,7 @@
 							<!--begin::Header Logo-->
 							<div class="header-logo">
 								<a href="#">
-									<img alt="Logo" src="{%static 'customer/logo_white.png'%}" class="max-h-50px">
+									<img alt="Logo" src="https://majdalkawaas.github.io/static/customer/logo_white.png" class="max-h-50px">
 								</a>
 							</div>
 							<!--end::Header Logo-->
@@ -193,9 +190,7 @@
 											<a href="queueSetup">
 												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queues</button>
 											</a>
-											<!-- <a href="{% url 'pdf' %}" target ="_blank" class="btn btn-primary mr-3">
-												<i class="fas fa-download"></i> test
-											</a> -->
+											
 										</div>
 
 										<div class="tab-pane fade" id="messages">
@@ -292,7 +287,7 @@
 				<!--begin::Header-->
 				<div class="d-flex align-items-center mt-5">
 					<div class="symbol symbol-100 mr-5">
-						<div class="symbol-label" style="background-image:url('{%static 'customer/300_21.jpg'%}')"></div>
+						<div class="symbol-label" style="background-image:url('https://majdalkawaas.github.io/static/customer/300_21.jpg')"></div>
 						
 					</div>
 					<div class="d-flex flex-column">
@@ -415,10 +410,10 @@
 	<!--end::Global Config-->
 
 	<!--begin::Global Theme Bundle(used by all pages)-->
-	<script src="{%static 'customer/plugins.bundle.js'%}"></script>
-	<script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-	<script src="{%static 'customer/scripts.bundle.js'%}"></script>
-	<script src="{%static 'customer/tagify.js'%}"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
+	<script src="https://majdalkawaas.github.io/static/customer/tagify.js"></script>
 	<!--end::Global Theme Bundle-->
 
 
