--- a/my_django_app/customer/Templates/Customer/queueSetup.html
+++ b/my_django_app/customer/Templates/Customer/queueSetup.html
@@ -16,19 +16,19 @@
 
     <!--begin::Page Custom Styles(used by this page)-->
 
-    <link rel="stylesheet" href="{%static 'customer/wizard-3.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/wizard-3.css">
     <!--end::Page Custom Styles-->
 
     <!--begin::Global Theme Styles(used by all pages)-->
-    <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
 
-    <link rel="shortcut icon" href="{%static 'customer/Blue_sqrs.png' %}"/>
+    <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
 
     <!--end::Global Theme Styles-->
     <!--begin::Layout Themes(used by all pages)-->
@@ -237,9 +237,9 @@
     <!--end::Global Config-->
 
     <!--begin::Global Theme Bundle(used by all pages)-->
-    <script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    <script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-    <script src="{%static 'customer/scripts.bundle.js'%}"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
     <!--end::Global Theme Bundle-->
 
     <script>
@@ -256,7 +256,7 @@
     </script>
 
     <!--begin::Page Scripts(used by this page)-->
-    <script src="{%static 'customer/wizard-3.js'%}"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/wizard-3.js"></script>
     <script>
         var q = document.getElementById("qname");
         q.onchange = function(){
