--- a/my_django_app/customer/Templates/Customer/registration/forgot.html
+++ b/my_django_app/customer/Templates/Customer/registration/forgot.html
@@ -1,17 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<!--
-Template Name: Metronic - Bootstrap 4 HTML, React, Angular 9 & VueJS Admin Dashboard Theme
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: https://1.envato.market/EA4JP
-Renew Support: https://1.envato.market/EA4JP
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
+
 <html lang="en">
 <!--begin::Head-->
 
@@ -19,42 +8,20 @@ License: You must have a valid license purchased only from themeforest(the above
     <title>Forgot Password</title>
     <meta name="description" content="Forgot password page example" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/login-3.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
-
-    
-
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/login-3.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
 
 
     <!--begin::Fonts-->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>      -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/> 
     <!--end::Fonts-->
 
-
-    <!--begin::Page Custom Styles(used by this page)-->
-    <!-- <link href="CMPS253/Template/assets/css/pages/login/login-3.css" rel="stylesheet" type="text/css"/> -->
-    <!--end::Page Custom Styles-->
-
-    <!--begin::Global Theme Styles(used by all pages)-->
-    <!-- <link href="CMPS253/Template/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
-                    <link href="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css"/>
-                    <link href="CMPS253/Template/assets/css/style.bundle.css" rel="stylesheet" type="text/css"/> -->
-    <!--end::Global Theme Styles-->
-
-    <!--begin::Layout Themes(used by all pages)-->
-
-    <!-- <link href="CMPS253/Template/assets/css/themes/layout/header/base/light.css" rel="stylesheet" type="text/css"/>
-<link href="CMPS253/Template/assets/css/themes/layout/header/menu/light.css" rel="stylesheet" type="text/css"/>
-<link href="CMPS253/Template/assets/css/themes/layout/brand/dark.css" rel="stylesheet" type="text/css"/>
-<link href="CMPS253/Template/assets/css/themes/layout/aside/dark.css" rel="stylesheet" type="text/css"/>        end::Layout Themes -->
-
-    <!-- <link rel="shortcut icon" href="CMPS253/Template/assets/media/logos/favicon.ico"/> -->
 
 </head>
 <!--end::Head-->
@@ -73,7 +40,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                 <!--begin::Aside Bottom-->
                 <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
-                    style=" background-image: url({%static 'customer/pattren_left.png' %}); background-size: cover ;" >
+                    style=" background-image: url(https://majdalkawaas.github.io/static/customer/pattren_left.png); background-size: cover ;" >
                 </div>
                 <!--end::Aside Bottom-->
             </div>
@@ -84,12 +51,10 @@ License: You must have a valid license purchased only from themeforest(the above
                 <!--begin::Top-->
                 <div class="text-right d-flex justify-content-center">
                     <div class="top-forgot text-right d-flex justify-content-end pt-5 pb-lg-0 pb-10">
-                        <!-- <span class="font-weight-bold text-muted font-size-h4">Having issues?</span>
-                        <a href="javascript:;" class="font-weight-bold text-primary font-size-h4 ml-2"
-                            id="kt_login_signup">Get Help</a> -->
+                        
                         <!--begin::Logo-->
                         <a href="#" class="text-center pt-2">
-                            <img src= "{%static 'customer/logo_blue.png'%}" class="max-h-125px" alt=""/>
+                            <img src= "https://majdalkawaas.github.io/static/customer/logo_blue.png" class="max-h-125px" alt=""/>
                         </a>
                         <!--end::Logo-->
 
@@ -125,8 +90,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="form-group d-flex flex-wrap">
                                 <button type="submit" id="kt_login_forgot_form_submit_button"
                                     class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-4">Submit</button>
-                                <!-- <a href="custom/pages/login/login-3/signin.html"  id="kt_login_forgot_cancel" class="btn btn-light-primary font-weight-bolder font-size-h6 px-8 py-4 my-3">Cancel</a> -->
-                                {% comment %} <button type="submit">Submit</button> {% endcomment %}
+                                
                             </div>
                             <!--end::Form group-->
                         </form>
@@ -206,21 +170,11 @@ License: You must have a valid license purchased only from themeforest(the above
         };
     </script>
     <!--end::Global Config-->
-
     <!--begin::Global Theme Bundle(used by all pages)-->
-    <!-- <script src="CMPS253/Template/assets/plugins/global/plugins.bundle.js"></script>
-    <script src="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
-    <script src="CMPS253/Template/assets/js/scripts.bundle.js"></script> -->
-    <script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    <script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-    <script src="{%static 'customer/scripts.bundle.js'%}"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
     <!--end::Global Theme Bundle-->
-
-
-    <!--begin::Page Scripts(used by this page)-->
-    {% comment %} <script src="{%static 'customer/login-3.js'%}"></script> {% endcomment %}
-
-    <!--end::Page Scripts-->
 </body>
 <!--end::Body-->
 
