--- a/my_django_app/customer/Templates/Customer/registration/password_reset_confirm.html
+++ b/my_django_app/customer/Templates/Customer/registration/password_reset_confirm.html
@@ -1,17 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<!--
-Template Name: Metronic - Bootstrap 4 HTML, React, Angular 9 & VueJS Admin Dashboard Theme
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: https://1.envato.market/EA4JP
-Renew Support: https://1.envato.market/EA4JP
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
+
 <html lang="en">
 <!--begin::Head-->
 
@@ -19,42 +8,22 @@ License: You must have a valid license purchased only from themeforest(the above
     <title>Forgot Password</title>
     <meta name="description" content="Forgot password page example" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/login-3.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light1.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/login-3.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+    <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
 
     
 
 
 
     <!--begin::Fonts-->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>      -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/> 
     <!--end::Fonts-->
-
-
-    <!--begin::Page Custom Styles(used by this page)-->
-    <!-- <link href="CMPS253/Template/assets/css/pages/login/login-3.css" rel="stylesheet" type="text/css"/> -->
-    <!--end::Page Custom Styles-->
-
-    <!--begin::Global Theme Styles(used by all pages)-->
-    <!-- <link href="CMPS253/Template/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
-                    <link href="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css"/>
-                    <link href="CMPS253/Template/assets/css/style.bundle.css" rel="stylesheet" type="text/css"/> -->
-    <!--end::Global Theme Styles-->
-
-    <!--begin::Layout Themes(used by all pages)-->
-
-    <!-- <link href="CMPS253/Template/assets/css/themes/layout/header/base/light.css" rel="stylesheet" type="text/css"/>
-<link href="CMPS253/Template/assets/css/themes/layout/header/menu/light.css" rel="stylesheet" type="text/css"/>
-<link href="CMPS253/Template/assets/css/themes/layout/brand/dark.css" rel="stylesheet" type="text/css"/>
-<link href="CMPS253/Template/assets/css/themes/layout/aside/dark.css" rel="stylesheet" type="text/css"/>        end::Layout Themes -->
-
-    <!-- <link rel="shortcut icon" href="CMPS253/Template/assets/media/logos/favicon.ico"/> -->
 
 </head>
 <!--end::Head-->
@@ -72,24 +41,13 @@ License: You must have a valid license purchased only from themeforest(the above
             <div class="login-aside d-flex flex-column flex-row-auto">
                 <!--begin::Aside Top-->
                 <div class="d-flex flex-column-auto flex-column pt-lg-40 pt-15">
-                    <!--begin::Aside Header-->
-                    <!-- <a href="#" class="login-logo text-center pt-lg-25 pb-10">
-				<img src="CMPS253/Template/assets/media/logos/logo-1.png" class="max-h-70px" alt=""/>
-			</a> -->
-                    <!--end::Aside Header-->
-
-                    <!--begin::Aside Title-->
-                    <!-- <h3 class="font-weight-bolder text-center font-size-h4 text-dark-50  line-height-xl">
-                User Experience & Interface Design<br/>
-                Strategy SaaS Solutions
-            </h3> -->
-                    <!--end::Aside Title-->
+                    
                 </div>
                 <!--end::Aside Top-->
 
                 <!--begin::Aside Bottom-->
                 <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
-                    style=" background-image: url({%static 'customer/pattren_left.png' %}); background-size: cover ;" >
+                    style=" background-image: url(https://majdalkawaas.github.io/static/customer/pattren_left.png); background-size: cover ;" >
                 </div>
                 <!--end::Aside Bottom-->
             </div>
@@ -98,15 +56,7 @@ License: You must have a valid license purchased only from themeforest(the above
             <!--begin::Content-->
             <div class="login-content flex-column-fluid d-flex flex-column p-10">
                 <!--begin::Top-->
-{% comment %} 
-                <div class="text-right d-flex justify-content-center">
-                    <div class="top-forgot text-right d-flex justify-content-end pt-5 pb-lg-0 pb-10">
-                        <span class="font-weight-bold text-muted font-size-h4">Having issues?</span>
-                        <a href="javascript:;" class="font-weight-bold text-primary font-size-h4 ml-2"
-                            id="kt_login_signup">Get Help</a>
-                    </div>
-                </div>
-{% endcomment %}
+
                 <!--end::Top-->
 
                 <!--begin::Wrapper-->
@@ -126,7 +76,6 @@ License: You must have a valid license purchased only from themeforest(the above
                             <!--begin::Form Group-->
                         <div class="form-group">
                             <label class="font-size-h6 font-weight-bolder text-dark">Password</label>                            
-                            {% comment %} <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />     {% endcomment %}
                             {{ form.new_password1 }}
                         </div>
                         <!--end::Form Group-->
@@ -134,7 +83,6 @@ License: You must have a valid license purchased only from themeforest(the above
                         <!--begin::Form Group-->
                         <div class="form-group">
                             <label class="font-size-h6 font-weight-bolder text-dark">Comfirm Password</label>                            
-                            {% comment %} <input type="password" class="form-control h-auto py-7 px-6 border-0 rounded-lg font-size-h6"  name="password" autocomplete="off" />     {% endcomment %}
                             {{ form.new_password2 }}
                         </div>
                         <!--end::Form Group-->
@@ -159,7 +107,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--end::Main-->
 
 
-    <!-- <script>var HOST_URL = "https://preview.keenthemes.com/metronic/theme/html/tools/preview";</script> -->
+
     <!--begin::Global Config(global config for global JS scripts)-->
     <script>
         var KTAppSettings = {
@@ -224,19 +172,11 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--end::Global Config-->
 
     <!--begin::Global Theme Bundle(used by all pages)-->
-    <!-- <script src="CMPS253/Template/assets/plugins/global/plugins.bundle.js"></script>
-    <script src="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
-    <script src="CMPS253/Template/assets/js/scripts.bundle.js"></script> -->
-    <script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    <script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-    <script src="{%static 'customer/scripts.bundle.js'%}"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
     <!--end::Global Theme Bundle-->
 
-
-    <!--begin::Page Scripts(used by this page)-->
-    {% comment %} <script src="{%static 'customer/login-3.js'%}"></script> {% endcomment %}
-
-    <!--end::Page Scripts-->
 </body>
 <!--end::Body-->
 
