--- a/my_django_app/customer/Templates/Customer/signin.html
+++ b/my_django_app/customer/Templates/Customer/signin.html
@@ -8,14 +8,15 @@
     <title>Sign In</title>
     <meta name="description" content="Singin page example" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/light1.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/login-3.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+    
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/plugins.bundle.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/login-3.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/light1.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/light.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/dark1.css">
+    <link rel="stylesheet" type="text/css" href="https://majdalkawaas.github.io/static/customer/dark.css">
 
     <!--begin::Fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
@@ -85,7 +86,6 @@
                             <!--begin::Form group-->
                             <div class="form-group">
                                 <label class="font-size-h6 font-weight-bolder text-dark">Username</label>
-                                {% comment %} <input class="form-control h-auto py-7 px-6 rounded-lg border-0" type="text" name="username" autocomplete="off" /> {% endcomment %}
                                 {{ form.username }}
                             </div>
                             <!--end::Form group-->
@@ -190,14 +190,14 @@
     <!--end::Global Config-->
 
     <!--begin::Global Theme Bundle(used by all pages)-->
-    <script src="{%static 'customer/plugins.bundle.js'%}"></script>
-    <script src="{%static 'customer/prismjs.bundle.js'%}"></script>
-    <script src="{%static 'customer/scripts.bundle.js'%}"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/plugins.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/prismjs.bundle.js"></script>
+    <script src="https://majdalkawaas.github.io/static/customer/scripts.bundle.js"></script>
     <!--end::Global Theme Bundle-->
 
 
     <!--begin::Page Scripts(used by this page)-->
-    <script src="{%static 'customer/login-3.js'%}"></script>
+    {% comment %} <script src="https://majdalkawaas.github.io/static/customer/login-3.js"></script> {% endcomment %}
     <!--end::Page Scripts-->
 </body>
 
